# qwert

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  mise.toml  package.json  pnpm-lock.yaml  scafforld-dirs.sh  tsconfig.json  vitest.config.ts
crates/qwert-core/: Cargo.toml
crates/qwert-core/src/: appearance.rs  config.rs  error.rs  lib.rs  link_index.rs  markdown.rs  revision.rs  revision_diff.rs  sanitize.rs  search.rs  status.rs  vault.rs
docs/: mcp-setup.md  qwert_仕様要件書_v10.md  qwert_仕様要件書_v11.md  qwert_仕様要件書_v12.md  spec.md  stignore.template
docs/tasks/: fix.md  index.md  p1-t01-project-setup.md  p1-t02-qwert-core-vault-config.md  p1-t03-qwert-core-markdown.md  p1-t04-qwert-core-appearance.md  p1-t05-tauri-commands.md  p1-t06-visual-foundation.md  p1-t07-frontend-stores.md  p1-t08-frontend-components.md  p1-t09-integration-autosave-watch.md  p1-t10-integration-newfile-settings.md
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mcp.rs
src/components/: BacklinksPanel.tsx  CommandPalette.tsx  Editor.tsx  ExternalChangeDialog.tsx  FileTree.tsx  Preview.tsx  RevisionDialog.tsx  SettingsPanel.tsx  StatusBar.tsx  VaultStatusBanner.tsx
src/lib/: contrast.ts  highlight.ts  math.ts  mermaid.ts  tauri.ts
src/stores/: appearance.test.ts  appearance.ts  editor.ts  settings.ts  vault.ts
src/styles/: editor.css  global.css  preview.css  theme-dark-high-contrast.css  theme-dark.css  theme-default.css  theme-high-contrast.css  tokens.css
src/types/: brand.ts  constants.ts  models.ts
(+22 files in other folders)
