[package]
name = "qwert-core"
version = "0.1.0"
edition = "2024"

[dependencies]
pulldown-cmark = { version = "0.12", features = ["simd", "html"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
walkdir = "2"
notify = "7"
directories = "5"
tempfile = "3"
ignore = "0.4"
regex = "1"
unicase = "2"
unicode-normalization = "0.1"
